--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,7 @@
 
 .title {
     font-size: 24px;
+    font-family: inherit;
 }
 
 .generate-btn {
@@ -49,6 +50,7 @@
 
 .generated-number {
     margin: 5px;
+    font-family: inherit;
     color: gold;
     font-weight: bold;
 }
