--- a/src/App.css
+++ b/src/App.css
@@ -1,61 +1,59 @@
 #root {
-    max-width: 1280px;
-    margin: 0 auto;
-    padding: 2rem;
-    text-align: center;
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
 }
 
 .container {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    min-height: 300px;
-    padding: 0px 20px;
-    border-radius: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  min-height: 300px;
+  padding: 0px 20px;
 }
 
 .container * {
-    font-family: inter;
-    color: gold;
+  font-family: inter;
+  color: gold;
 }
 
 .title {
-    font-size: 24px;
-    font-family: inherit;
+  font-size: 24px;
+  font-family: inherit;
 }
 
 .generate-btn {
-    border-radius: 11px;
-    padding: 0.6em 1.2em;
-    font-size: 1em;
-    font-weight: bold;
-    font-family: inherit;
-    background-color: #081144;
-    border: 3px solid black;
-    border-bottom: 8px solid black;
-    cursor: pointer;
+  border-radius: 11px;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: bold;
+  font-family: inherit;
+  background-color: #227;
+  border: 3px solid #004;
+  border-bottom: 8px solid #004;
+  cursor: pointer;
 }
 
 .generate-btn:focus {
-    outline: none;
+  outline: none;
 }
 
 .generated-number-container {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-top: 20px;
 }
 
 .generated-number {
-    margin: 5px;
-    font-family: inherit;
-    color: gold;
-    font-weight: bold;
+  margin: 5px;
+  font-family: inherit;
+  font-weight: 600;
 }
 
 @font-face {
-    font-family: inter;
-    src: url(./assets/inter.ttf);
+  font-family: inter;
+  src: url(./assets/inter.ttf);
 }
